# pytemplate

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  pyproject.toml
pypackage/: __init__.py  main.py
pytemplate/: __init__.py
tests/: __init__.py  conftest.py  test_main.py
