[tool.poetry]
name = "pytemplate"
version = "1.0.0"
description = "Python template project"
authors = ["My Name <my_name@email.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
yapf = "^0.32.0"
pre-commit = "^2.20.0"
toml = "^0.10.2"
flake8 = "^5.0.4"
# use flake8-pyproject to read flake8 config from pyproject.toml
flake8-pyproject = "^1.2.0"
pylint = "^2.15.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.yapf]
based_on_style = "google"
spaces_before_comment = 4
split_before_logical_operator = true
column_limit = 120

# Includes Pyflakes(error linter), pycodestyle(style linter for pep8) and mccabe(complexity linter)
[tool.flake8] # use flake8-pyproject to read flake8 config from pyproject.toml
max-line-length = 120

[tool.pylint]
max-line-length = 120
good-names = [
    "i",
    "j",
    "k",
    "v",
    "_",
    "x",
    "y",
    "z",
    "r",
] # pylint enforces snake_case and does not allows variables less than 3 characters
